[package]
name = "cryptography-rust"
version = "0.1.0"
authors = ["The cryptography developers <cryptography-dev@python.org>"]
edition = "2018"
publish = false

[dependencies]
lazy_static = "1"
# pyo3 = { version = "0.15.1" }
# TODO: update after merge/release in pyo3
pyo3 = { git = "https://github.com/aganders3/pyo3", branch = "export-conf", version = "0.15.1" }
asn1 = { version = "0.8.7", default-features = false, features = ["derive"] }
pem = "1.0"
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock"] }
ouroboros = "0.13"
openssl = "0.10.38"
openssl-sys = "0.9.72"

[build-dependencies]
cc = "1.0.72"
# TODO: update after merge/release in pyo3

[build-dependencies.pyo3-build-config]
git = "https://github.com/aganders3/pyo3"
branch = "export-conf"
version = "0.15.1"
features = ["export-config"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[lib]
name = "cryptography_rust"
crate-type = ["cdylib"]

[profile.release]
lto = "thin"
overflow-checks = true

[patch.crates-io]
openssl-sys = { git = "https://github.com/sfackler/rust-openssl.git" }
openssl = { git = "https://github.com/sfackler/rust-openssl.git" }
